# gitops-configserver

./: .gitignore  .mypy.ini  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  requirements-mypy.txt  requirements.txt  run.sh  run_tests.sh
.github/workflows/: release.yml  test.yml
config/: index.yaml  index.yml
config/tenant1/: index.yaml  index.yml
config/tenant1/templates/: template1.tpl
config/tenant1/variables/: defaults.yml  dev.yml
config/tenant1/variables/nodes/: node1.yaml
docs/: cli.rst  index.rst
gitops_configserver/: cli.py  config.py  config_loader.py  extensions.py  hieradata_resolver.py  server.py  templates_rendering.py  utils.py  workflow.py
gitops_configserver/configs/: views.py
gitops_mt/: config.py  git.py  templates_rendering.py  utils.py
resources/: logger.yaml
resources/test_config/: index.yaml  index.yml
resources/test_config/tenant1/: index.yaml  index.yml
resources/test_config/tenant1/templates/: template1.tpl
resources/test_config/tenant1/variables/: defaults.yml  prod.yml
resources/test_config/tenant1/variables/environments/: dev.yaml  prod.yaml
resources/test_config/tenant1/variables/nodes/: node1.yaml
resources/test_config/tenant2/templates/: build_variants.schema.json  build_variants.yaml
resources/test_config/tenant2/variables/: defaults.yaml
resources/test_config/tenant2/variables/environments/: test.yaml
tests/: test_hieradata_resolver.py  test_rendering.py  test_variables_resolver.py
